# fast-api-boiler

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
app/: __init__.py  config.py  database.py  main.py
app/api/v1/: __init__.py
app/api/v1/routers/: __init__.py  health.py  users.py
app/core/: __init__.py  exceptions.py  logging.py  middleware.py  security.py
app/models/: __init__.py  base.py  user.py
app/repositories/: __init__.py  base.py  user.py
app/schemas/: __init__.py  base.py  user.py
app/services/: __init__.py  user.py
tests/: __init__.py  conftest.py  factories.py  test_health.py  test_users.py
